sort.basic.bubble.AlgBubbleSort2.scala.error
Compilation error:
AlgBubbleSort2:10: error: ')' expected but '}' found.
  }
  ^